@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/tuxonice-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.96 2010/08/31 10:26:08 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.97 2010/08/31 16:15:43 nelchael Exp $
+
+*tuxonice-sources-2.6.34-r4 (31 Aug 2010)
+*tuxonice-sources-2.6.32-r15 (31 Aug 2010)
+
+  31 Aug 2010; Krzysztof Pawlik <nelchael@gentoo.org>
+  +tuxonice-sources-2.6.32-r15.ebuild, +tuxonice-sources-2.6.34-r4.ebuild:
+  Revision bump for new genpatches.
 
   31 Aug 2010; Krzysztof Pawlik <nelchael@gentoo.org>
   tuxonice-sources-2.6.30-r6.ebuild, tuxonice-sources-2.6.30-r11.ebuild,
